--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>giis</groupId>
-	<artifactId>samples-test-dev</artifactId>
+	<artifactId>CentroDeportivo</artifactId>
 	<version>2.1.4-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<organization>
