--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,13 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.18.2</version>
 		</dependency>
+		
+		<dependency>
+ 		 	<groupId>org.projectlombok</groupId>
+  			<artifactId>lombok</artifactId>
+  			<version>1.16.10</version>
+  			<scope>provided</scope>
+	</dependency>
 	</dependencies>
 
 	<build>
